PLUGINWIZARD-39 : Bootstrap integratrion for Lutece v4 - Work in progress
git-svn-id: http://dev.lutece.paris.fr/svn/lutece/portal/trunk/plugins/technical/plugin-pluginwizard@46733 bab10101-e421-0410-a517-8ce0973de3ef

--- a/src/java/fr/paris/lutece/plugins/pluginwizard/resources/pluginwizard_messages_fr.properties
+++ b/src/java/fr/paris/lutece/plugins/pluginwizard/resources/pluginwizard_messages_fr.properties
@@ -32,9 +32,8 @@ pluginwizard_create_plugin.labelAddSpringContextXml=Le fichier de context de Spr
 pluginwizard_create_plugin.labelAddXPage=Les classes Java des XPage
 pluginwizard_create_plugin_description.labelTrue=Oui
 pluginwizard_create_plugin_description.labelFalse=Non
-pluginwizard_create_plugin.labelStepOf=Etape de
 pluginwizard_create_plugin.labelInformation=Information
-pluginwizard_create_plugin.pageHelp=Cet assistant permet de g\u00e9n\u00e9rer un plugin Lut\u00e8ce.Il suffit de l'adapter afin de r\u00e9pondre \u00e0 vos besoins sp\u00e9cifiques. Il y a sept \u00e9tapes comme d\u00e9crit ci-dessus. A chaque \u00e9tape des informations n\u00e9cessaires seront demand\u00e9es.A la fin de ces \u00e9tapes pluginwizard vous d\u00e9livre une archive avec tous les fichiers de configuration n\u00e9cessaires \u00e0 votre plugin.<ul><li>Le nom d'un plugin doit \u00eatre en minuscule (ex. soleil, panier, etc.. ). Les cases \u00e0 cocher permettent de choisir le type de fichier \u00e0 inclure. Si aucune case n'est choisie, tous les fichiers seront produits</li><li>Le bouton "Valider" permet de poursuivre vers l'\u00e9tape de description du plugin.</li></ul>
+pluginwizard_create_plugin.pageHelp=Cet assistant permet de g\u00e9n\u00e9rer un plugin Lut\u00e8ce. A chaque \u00e9tape vous pourrez d\u00e9crire les composants \u00e0 g\u00e9n\u00e9rer. A la fin de celles-ci pluginwizard vous d\u00e9livrera une archive avec tous les fichiers sources et de configuration n\u00e9cessaires \u00e0 votre plugin.
 
 
 ###############################################################################
@@ -51,7 +50,7 @@ pluginwizard_create_attribute.labelAttributeType=Type de l'attribut
 pluginwizard_create_attribute.buttonCreateAttribute=Cr\u00e9er cet attribut
 pluginwizard_create_attribute.buttonBack=Gestion de la classe m\u00e9tier
 pluginwizard_create_attribute.labelAttributeKey=Cl\u00e9 primaire
-pluginwizard_create_attribute.pageHelp=Les attributs d'une classe Pojo sont en minuscule avec un "_' (ex. id_person est un attribut qui repr\u00e9sente la colonne de la table SQL). Le type de l'attribut est choisi dans le menu d\u00e9roulant. Le bouton "Cr\u00e9er un attribut " permet de cr\u00e9er un attribut  
+pluginwizard_create_attribute.pageHelp=Les attributs sont en minuscule avec un "_' et font r\u00e9f\u00e9rence \u00e0 une colonne de la base de donn\u00e9es (ex. id_person est un attribut qui repr\u00e9sente la colonne de la table SQL). Le type de l'attribut est choisi dans le menu d\u00e9roulant. Le bouton "Cr\u00e9er un attribut " permet de cr\u00e9er un attribut  
 
 ###############################################################################
 #pluginwizard_modify_attribute.html
@@ -61,7 +60,7 @@ pluginwizard_modify_attribute.labelAttributeType=Type de l'attribut
 pluginwizard_modify_attribute.buttonModifyAttribute=Modifier cet attribut
 pluginwizard_modify_attribute.buttonBack=Gestion de la classe m\u00e9tier
 pluginwizard_modify_attribute.labelAttributeKey=Cl\u00e9 primaire
-pluginwizard_modify_attribute.pageHelp=Les attributs d'une classe Pojo sont en minuscule avec un "_' (ex. id_person) est un attribut qui repr\u00e9sente la colonne de la table SQL. Le type de l'attribut est choisi dans le menu d\u00e9roulant. Le bouton "Modifier cet attribut" permet de modifier l'attribut 
+pluginwizard_modify_attribute.pageHelp=Les attributs sont en minuscule avec un "_' et font r\u00e9f\u00e9rence \u00e0 une colonne de la base de donn\u00e9es (ex. id_person) est un attribut qui repr\u00e9sente la colonne de la table SQL. Le type de l'attribut est choisi dans le menu d\u00e9roulant. Le bouton "Modifier cet attribut" permet de modifier l'attribut 
 
 ################################################################################
 # modify_plugin.html
@@ -81,14 +80,14 @@ pluginwizard_modify_plugin.labelAddPluginXmlDefinition=Le fichier XML de d\u00e9
 pluginwizard_modify_plugin.labelAddSpringContextXml=Le fichier de context de Spring
 pluginwizard_modify_plugin.labelAddXPage=Les classes Java des XPage
 
-pluginwizard_modify_plugin.labelStepOf=Etape de
 pluginwizard_modify_plugin.labelInformation=Information
-pluginwizard_modify_plugin.pageHelp=La cr\u00e9ation d'un plugin se fait en 8 \u00e9tapes. La "Cr\u00e9ation du plugin" constitue la premi\u00e8re \u00e9tape. Le bouton "Valider" va permettre de continuer \u00e0 l'\u00e9tape de la description du plugin.Le choix des types de fichiers peut \u00eatre effectu\u00e9 en cochant \u00e0 gauche les fichiers voulus.
+pluginwizard_modify_plugin.pageHelp=Cet assistant permet de g\u00e9n\u00e9rer un plugin Lut\u00e8ce. A chaque \u00e9tape vous pourrez d\u00e9crire les composants \u00e0 g\u00e9n\u00e9rer. A la fin de celles-ci pluginwizard vous d\u00e9livrera une archive avec tous les fichiers sources et de configuration n\u00e9cessaires \u00e0 votre plugin.
+
 
 
 ###############################################################################
 #pluginwizard.html
-pluginwizard.pageTitle=Moteur de g\u00e9n\u00e9ration de squelette de module
+pluginwizard.pageTitle=Moteur de g\u00e9n\u00e9ration de squelette de plugin
 pluginwizard.package=Nom du package 
 pluginwizard.business_class=Nom de la classe m\u00e9tier 
 pluginwizard.table=Nom de la table
@@ -130,7 +129,7 @@ pluginwizard_create_admin_feature.labelLevel2=Niveau 2 - Droits du webmestre
 pluginwizard_create_admin_feature.labelLevel3=Niveau 3 - Droits de l'assistant webmestre
 pluginwizard_create_admin_feature.buttonCreateFeature=Cr\u00e9er la fonctionnalit\u00e9
 pluginwizard_create_admin_feature.buttonBack=Retour
-pluginwizard_create_admin_feature.pageHelp=Le droit est une cl\u00e9 qui sera en lettres capitales et d\u00e9limiter avec le mot management. Le titre et la description sont des cl\u00e9s qui seront remplac\u00e9es par du texte dans le rendu visuel. Le contenu des cl\u00e9s se trouve dans les fichiers de type (nom_du_plugin)_messages_fr.properties pour la version fran\u00e7aise. Le niveau de droit d\u00e9finit le p\u00e9rim\u00e8tre d'acc\u00e8s pour un groupe sp\u00e9cifique d'utilisateurs backoffice. Url de l'image sera l'endroit o\u00f9 l'image repr\u00e9sentera le plugin sera plac\u00e9 avant l'\u00e9xecution du plugin.  
+pluginwizard_create_admin_feature.pageHelp=Une fonctionnalit\u00e9 d'administration ou "Admin Feature" est une fonction qui sera accessible dans les menus du backoffice \u00e0 tous les utilisateurs disposant du droit et du niveau de droit associ\u00e9. Le nom technique est la racine de nommage des composants associ\u00e9s \u00e0 cette fonctionnalit\u00e9 (Classe Java, JSP, templates, ...)  
 
 ###############################################################################
 #pluginwizard_create_plugin_application.html
@@ -190,7 +189,7 @@ pluginwizard_manage_plugin_admin_features.buttonBack=Etape pr\u00e9c\u00e9dente
 pluginwizard_manage_plugin_admin_features.buttonNext=Etape suivante
 pluginwizard_manage_plugin_admin_features.buttonAddFeature=Ajouter une fonctionnalit\u00e9
 pluginwizard_manage_plugin_admin_features.helpFeatureManagement=Cet attribut est toujours en majuscules.
-pluginwizard_manage_plugin_admin_features.pageHelp=Les fonctionnalit\u00e9s d'administration permettent de d\u00e9clarer un ensemble de t\u00e2ches du back office auxquelles un certain type d'utilisateur aura droit. Dans le g\u00e9n\u00e9rateur la fonction d'administration des objets m\u00e9tiers est donn\u00e9e par une  fonctionnalit\u00e9 d'administration. L'interface permet d'ajouter, de modifier et de supprimer une fonctionnalit\u00e9. 
+pluginwizard_manage_plugin_admin_features.pageHelp=Une fonctionnalit\u00e9 d'administration ou "Admin Feature" est une fonction qui sera accessible dans les menus du backoffice \u00e0 tous les utilisateurs disposant du droit et du niveau de droit associ\u00e9. Le nom technique est la racine de nommage des composants associ\u00e9s \u00e0 cette fonctionnalit\u00e9 (Classe Java, JSP, templates, ...)  
 pluginwizard_manage_plugin_admin_features.labelCreationStep=Cr\u00e9ation
 pluginwizard_manage_plugin_admin_features.labelDescriptionStep=Description
 pluginwizard_manage_plugin_admin_features.labelFeaturesStep=Administration
@@ -291,21 +290,6 @@ pluginwizard_manage_plugin_portlets.labelPortletAction=Action
 
 
 ###############################################################################
-#pluginwizard_manage_resource_keys.html
-pluginwizard_manage_resource_keys.pageTitle=G\u00e9rer les resources
-pluginwizard_manage_resource_keys.buttonModifyPortlet=Modifer
-pluginwizard_manage_resource_keys.buttonDeletePortlet=Effacer
-pluginwizard_manage_resource_keys.buttonAddKey=Ajouter une cl\u00e9
-pluginwizard_manage_resource_keys.buttonBack=Etape pr\u00e9c\u00e9dente
-pluginwizard_manage_resource_keys.buttonNext=Etape suivante
-pluginwizard_manage_resource_keys.buttonItemsPerPage=Nombre de ressource
-pluginwizard_manage_resource_keys.labelItemsPerPage=Ressource par page
-pluginwizard_manage_resource_keys.columnTitleIdentifier=Identifiant
-pluginwizard_manage_resource_keys.columnTitleEnglish=Anglais
-pluginwizard_manage_resource_keys.columnTitleFrench=Fran\u00e7ais
-
-
-###############################################################################
 #pluginwizard_plugin_recapitulate.html
 pluginwizard_plugin_recapitulate.pageTitle=R\u00e9capitulatif et g\u00e9n\u00e9ration des sources du plugin
 pluginwizard_plugin_recapitulate.buttonBack=Etape pr\u00e9c\u00e9dente
@@ -320,7 +304,7 @@ pluginwizard_plugin_recapitulate.labelAdminFeatures=fonctionnalit\u00e9s d'admin
 pluginwizard_plugin_recapitulate.labelBusinessClasses=classes m\u00e9tiers
 pluginwizard_plugin_recapitulate.buttonGenerate=G\u00e9n\u00e9rer l'archive des sources
 pluginwizard_plugin_recapitulate.labelPluginName=Nom du plugin
-pluginwizard_plugin_recapitulate.pageHelp=Le plugin est pr\u00eat \u00e0 \u00eatre g\u00e9n\u00e9r\u00e9. Une synth\u00e8se des composants du plugin est affich\u00e9e.Le bouton "G\u00e9n\u00e9rer l'archive des sources" permet de cr\u00e9er l'archive. Le bouton "Etape pr\u00e9c\u00e9dente" permet de revenir sur les \u00e9tapes afin de modifier les renseignements du plugin.
+pluginwizard_plugin_recapitulate.pageHelp=Le plugin est pr\u00eat \u00e0 \u00eatre g\u00e9n\u00e9r\u00e9. Le bouton "G\u00e9n\u00e9rer l'archive des sources" permet de cr\u00e9er l'archive. Le bouton "Etape pr\u00e9c\u00e9dente" permet de revenir sur les \u00e9tapes afin de modifier les renseignements du plugin.
 pluginwizard_plugin_recapitulate.alertProperties=<h4>Important ! </h4>Avant la premi\u00e8re ex\u00e9cution du plugin, vous devez finaliser les resources "texte" du plugin dans les diff\u00e9rentes langues.<br>Les fichiers se trouvent dans le r\u00e9pertoire /src/java/fr/paris/lutece/plugins/<i>monplugin</i>/resources/.
 
 
@@ -361,8 +345,7 @@ pluginwizard_modify_admin_feature.labelPortletsStep=Portlets
 pluginwizard_modify_admin_feature.labelI18n=i18n
 pluginwizard_modify_admin_feature.labelGenerateStep=G\u00e9n\u00e9ration
 
-pluginwizard_modify_admin_feature.pageHelp=Le droit est une cl\u00e9 qui sera en lettres capitales et d\u00e9limiter avec le mot management. Le titre et la description sont des cl\u00e9s qui seront remplac\u00e9es par du texte dans le rendu visuel. Le contenu des cl\u00e9s se trouve dans les fichiers de type (nom_du_plugin)_messages_fr.properties pour la version fran\u00e7aise. Le niveau de droit d\u00e9finit le p\u00e9rim\u00e8tre d'acc\u00e8s pour un groupe sp\u00e9cifique d'utilisateurs backoffice. Url de l'image sera l'endroit o\u00f9 l'image repr\u00e9sentera le plugin sera plac\u00e9 avant l'\u00e9xecution du plugin.
-
+pluginwizard_modify_admin_feature.pageHelp=Une fonctionnalit\u00e9 d'administration ou "Admin Feature" est une fonction qui sera accessible dans les menus du backoffice \u00e0 tous les utilisateurs disposant du droit et du niveau de droit associ\u00e9. Le nom technique est la racine de nommage des composants associ\u00e9s \u00e0 cette fonctionnalit\u00e9 (Classe Java, JSP, templates, ...)  
 
 ###############################################################################
 #pluginwizard_create_plugin_application.html
@@ -374,7 +357,7 @@ pluginwizard_create_plugin_application.labelXPageStep=XPage
 pluginwizard_create_plugin_application.labelPortletsStep=Portlets
 pluginwizard_create_plugin_application.labelI18n=i18n
 pluginwizard_create_plugin_application.labelGenerateStep=G\u00e9n\u00e9ration
-pluginwizard_create_plugin_application.pageHelp=La cr\u00e9ation d'une XPage peut se faire en d\u00e9clarant un identifiant et une classe Java qui a la responsabilit\u00e9 d'impl\u00e9menter les fonctionnalit\u00e9s propos\u00e9es. Evidemment les cas affich\u00e9s seront multiples en augmentant le nombre de param\u00e8tres dans la requ\u00eate.
+pluginwizard_create_plugin_application.pageHelp=Une XPage est une page "sp\u00e9ciale" du site qui se trouve en dehors de l'arborescence des pages "normales". Une XPage permet de r\u00e9aliser des applications int\u00e9gr\u00e9es au portail.
 
 
 ###############################################################################
@@ -396,7 +379,7 @@ pluginwizard_modify_portlet_feature.pageTitle=Modifier le portlet
 
 ###############################################################################
 #pluginwizard_create_plugin_description.html
-pluginwizard_create_plugin_description.pageTitle=Ajouter la description du plugin
+pluginwizard_create_plugin_description.pageTitle=Description du plugin
 pluginwizard_create_plugin_description.labelPluginName=Nom du plugin
 pluginwizard_create_plugin_description.labelPluginVersion=Version du plugin
 pluginwizard_create_plugin_description.labelPluginCopyright=Copyright
@@ -409,7 +392,7 @@ pluginwizard_create_plugin_description.buttonNext=Etape suivante
 
 ###############################################################################
 #pluginwizard_modify_plugin_description.html
-pluginwizard_modify_plugin_description.pageTitle=Modification de la description du plugin
+pluginwizard_modify_plugin_description.pageTitle=Description du plugin
 pluginwizard_modify_plugin_description.labelPluginName=Nom du plugin
 pluginwizard_modify_plugin_description.labelPluginVersion=Version du plugin
 pluginwizard_modify_plugin_description.labelPluginCopyright=Copyright
@@ -483,7 +466,7 @@ pluginwizard_create_plugin_portlet.labelBusinessAttributes=Attributs
 pluginwizard_create_plugin_portlet.labelAdminFeatures=Fonctionnalit\u00e9s d'administration
 pluginwizard_create_plugin_portlet.pageHelp=Les champs n\u00e9cessaires pour la cr\u00e9ation d'un plugin sont la classe du portlet.,le nom du portlet qui doit obligatoirement finir par "_PORTLET',l'url de cr\u00e9ation qui correspond \u00e0 une JSP qui sera aussi g\u00e9n\u00e9r\u00e9 automatiquement. La modification du portlet qui sera aussi g\u00e9r\u00e9e par une JSP. Le bouton " Cr\u00e9er la portlet " permet de cr\u00e9er son portlet.
 pluginwizard_create_business_class.buttonCreateClass=Cr\u00e9er la classe m\u00e9tier
-pluginwizard_create_business_class.pageHelp=Le nom de la classe m\u00e9tier doit commencer par une lettre en capitale. Elle est repr\u00e9sent\u00e9e dans une base de donn\u00e9es gr\u00e2ce \u00e0 une table. Le nom de table doit \u00eatre renseign\u00e9. Le g\u00e9n\u00e9rateur va g\u00e9n\u00e9rer un script SQL pour la persistance des objets m\u00e9tiers. Chaque classe m\u00e9tier est attach\u00e9e \u00e0 une fonctionnalit\u00e9 d'administration. L'ajout des attributs se fait lors de la modification de la classe m\u00e9tier.
+pluginwizard_create_business_class.pageHelp=Une classe m\u00e9tier doit avoir au minimum deux attributs : une cl\u00e9 primaire et un attribut descriptif de l'objet. Le nom de la classe doit respecter les r\u00e8gles de nommage Java, le nom de la table et des attributs doivent respecter les r\u00e8gles de nommage SQL.
 
 
 ################### Etapes
@@ -517,7 +500,7 @@ pluginwizard_modify_plugin_application.labelXPageStep=XPage
 pluginwizard_modify_plugin_application.labelPortletsStep=Portlets
 pluginwizard_modify_plugin_application.labelI18n=i18n
 pluginwizard_modify_plugin_application.labelGenerateStep=G\u00e9n\u00e9ration
-pluginwizard_modify_plugin_application.pageHelp=La modification d'une XPage peut se faire en d\u00e9clarant un identifiant et une classe Java qui a la responsabilit\u00e9 d'impl\u00e9menter les fonctionnalit\u00e9s propos\u00e9es. Evidemment les cas affich\u00e9s seront multiples en augmentant le nombre de param\u00e8tres dans la requ\u00eate.
+pluginwizard_modify_plugin_application.pageHelp=Une XPage est une page "sp\u00e9ciale" du site qui se trouve en dehors de l'arborescence des pages "normales". Une XPage permet de r\u00e9aliser des applications int\u00e9gr\u00e9es au portail.
 
 
 
@@ -530,13 +513,13 @@ pluginwizard_manage_business_classes.labelPortletsStep=Portlets
 pluginwizard_manage_business_classes.labelI18n=i18n
 pluginwizard_manage_business_classes.labelGenerateStep=G\u00e9n\u00e9ration
 pluginwizard_manage_business_classes.labelBusinessAction=Action
-pluginwizard_manage_business_classes.pageHelp=La gestion des classes m\u00e9tier permet d'inclure de nouveaux objets m\u00e9tiers. La couche m\u00e9tier est cr\u00e9e \u00e0 partir des Pojo d\u00e9clar\u00e9s. L'ajout d'une classe m\u00e9tier se fait \u00e0 l'aide du bouton 'Ajouter classe'. Lorsque qu'une classe a \u00e9t\u00e9 cr\u00e9e, on peut ensuite le rajouter des attributs dans en la modifiant gr\u00e2ce au bouton "Modifier ". 
+pluginwizard_manage_business_classes.pageHelp=Les objets m\u00e9tiers sont d\u00e9crits dans des classes et leur persistence est assur\u00e9e en base de donn\u00e9es. Une table est cr\u00e9\u00e9e par objet, les attributs de l'objet sont stock\u00e9s dans les colonnes de cette table. 
 
 
 pluginwizard_modify_business_class.labelAttributeKey=Cl\u00e9
 pluginwizard_modify_business_class.labelAttributeDescription=Description
 pluginwizard_modify_business_class.labelAttributeAction=Action
-pluginwizard_modify_business_class.pageHelp=La modification d'une classe m\u00e9tier peut \u00eatre une modification au niveau de son nom mais aussi des attributs qu'elle contient. Une classe m\u00e9tier doit avoir au minimum deux attributs. Le bouton " Cr\u00e9er un attribut " permet de rajouter un attibut. Pour des besoins de simplicit\u00e9, une classe doit avoir une seule cl\u00e9 primaire et une seule description comme attribut. Le type de la cl\u00e9 est "int" et le type de la description est "String ". Apr\u00e8s l'ajout des attributs, il faudra avoir exactement deux attributs ayant chacune une encoche verte. Tous les autres attributs sont en rouge. Le bouton "Retour" permet de retourner au menu de la gestion des classes m\u00e9tiers. Le bouton " Modifier la classe " permet de modifier la classe. 
+pluginwizard_modify_business_class.pageHelp=Une classe m\u00e9tier doit avoir au minimum deux attributs : une cl\u00e9 primaire et un attribut descriptif de l'objet. Le nom de la classe doit respecter les r\u00e8gles de nommage Java, le nom de la table et des attributs doivent respecter les r\u00e8gles de nommage SQL.
 
 pluginwizard_manage_plugin_applications.labelCreationStep=Cr\u00e9ation
 pluginwizard_manage_plugin_applications.labelDescriptionStep=Description
