PLUGINWIZARD-40 : Building several generation scheme
git-svn-id: http://dev.lutece.paris.fr/svn/lutece/portal/trunk/plugins/technical/plugin-pluginwizard@50348 bab10101-e421-0410-a517-8ce0973de3ef

--- a/src/java/fr/paris/lutece/plugins/pluginwizard/resources/pluginwizard_messages_fr.properties
+++ b/src/java/fr/paris/lutece/plugins/pluginwizard/resources/pluginwizard_messages_fr.properties
@@ -306,7 +306,7 @@ pluginwizard_plugin_recapitulate.buttonGenerate=G\u00e9n\u00e9rer l'archive des 
 pluginwizard_plugin_recapitulate.labelPluginName=Nom du plugin
 pluginwizard_plugin_recapitulate.pageHelp=Le plugin est pr\u00eat \u00e0 \u00eatre g\u00e9n\u00e9r\u00e9. Le bouton "G\u00e9n\u00e9rer l'archive des sources" permet de cr\u00e9er l'archive. Le bouton "Etape pr\u00e9c\u00e9dente" permet de revenir sur les \u00e9tapes afin de modifier les renseignements du plugin.
 pluginwizard_plugin_recapitulate.alertProperties=<h4>Important ! </h4>Avant la premi\u00e8re ex\u00e9cution du plugin, vous devez finaliser les resources "texte" du plugin dans les diff\u00e9rentes langues.<br>Les fichiers se trouvent dans le r\u00e9pertoire /src/java/fr/paris/lutece/plugins/<i>monplugin</i>/resources/.
-
+pluginwizard_plugin_recapitulate.labelScheme=Mod\u00e8le de g\u00e9n\u00e9ration
 
 
 ###############################################################################
