PLUGINWIZARD-40 : Building several generation scheme
git-svn-id: http://dev.lutece.paris.fr/svn/lutece/portal/trunk/plugins/technical/plugin-pluginwizard@50418 bab10101-e421-0410-a517-8ce0973de3ef

--- a/src/java/fr/paris/lutece/plugins/pluginwizard/resources/pluginwizard_messages_fr.properties
+++ b/src/java/fr/paris/lutece/plugins/pluginwizard/resources/pluginwizard_messages_fr.properties
@@ -517,6 +517,8 @@ pluginwizard_manage_business_classes.pageHelp=Les objets m\u00e9tiers sont d\u00
 
 
 pluginwizard_modify_business_class.labelAttributeKey=Cl\u00e9
+pluginwizard_modify_business_class.labelNotNull=Obligatoire
+pluginwizard_modify_business_class.labelMaxLength=Taille Maxi
 pluginwizard_modify_business_class.labelAttributeDescription=Description
 pluginwizard_modify_business_class.labelAttributeAction=Action
 pluginwizard_modify_business_class.pageHelp=Une classe m\u00e9tier doit avoir au minimum deux attributs : une cl\u00e9 primaire et un attribut descriptif de l'objet. Le nom de la classe doit respecter les r\u00e8gles de nommage Java, le nom de la table et des attributs doivent respecter les r\u00e8gles de nommage SQL.
