PLUGINWIZARD-40 : Building several generation scheme
git-svn-id: http://dev.lutece.paris.fr/svn/lutece/portal/trunk/plugins/technical/plugin-pluginwizard@50442 bab10101-e421-0410-a517-8ce0973de3ef

--- a/src/java/fr/paris/lutece/plugins/pluginwizard/resources/pluginwizard_messages_fr.properties
+++ b/src/java/fr/paris/lutece/plugins/pluginwizard/resources/pluginwizard_messages_fr.properties
@@ -50,6 +50,8 @@ pluginwizard_create_attribute.labelAttributeType=Type de l'attribut
 pluginwizard_create_attribute.buttonCreateAttribute=Cr\u00e9er cet attribut
 pluginwizard_create_attribute.buttonBack=Gestion de la classe m\u00e9tier
 pluginwizard_create_attribute.labelAttributeKey=Cl\u00e9 primaire
+pluginwizard_create_attribute.labelMandatory=Obligatoire
+pluginwizard_create_attribute.labelClassDescription=Description
 pluginwizard_create_attribute.pageHelp=Les attributs sont en minuscule avec un "_' et font r\u00e9f\u00e9rence \u00e0 une colonne de la base de donn\u00e9es (ex. id_person est un attribut qui repr\u00e9sente la colonne de la table SQL). Le type de l'attribut est choisi dans le menu d\u00e9roulant. Le bouton "Cr\u00e9er un attribut " permet de cr\u00e9er un attribut  
 
 ###############################################################################
@@ -60,6 +62,8 @@ pluginwizard_modify_attribute.labelAttributeType=Type de l'attribut
 pluginwizard_modify_attribute.buttonModifyAttribute=Modifier cet attribut
 pluginwizard_modify_attribute.buttonBack=Gestion de la classe m\u00e9tier
 pluginwizard_modify_attribute.labelAttributeKey=Cl\u00e9 primaire
+pluginwizard_modify_attribute.labelMandatory=Obligatoire
+pluginwizard_modify_attribute.labelClassDescription=Description
 pluginwizard_modify_attribute.pageHelp=Les attributs sont en minuscule avec un "_' et font r\u00e9f\u00e9rence \u00e0 une colonne de la base de donn\u00e9es (ex. id_person) est un attribut qui repr\u00e9sente la colonne de la table SQL. Le type de l'attribut est choisi dans le menu d\u00e9roulant. Le bouton "Modifier cet attribut" permet de modifier l'attribut 
 
 ################################################################################
@@ -232,6 +236,8 @@ pluginwizard_modify_business_class.labelPortletsStep=Portlets
 pluginwizard_modify_business_class.labelI18n=i18n
 pluginwizard_modify_business_class.labelGenerateStep=G\u00e9n\u00e9ration
 
+pluginwizard_modify_business_class.labelBusinessClass=Nom de la classe
+pluginwizard_modify_business_class.labelBusinessTableName=Nom de la table
 pluginwizard_modify_business_class.labelAttributeName=Nom de l'attribut
 pluginwizard_modify_business_class.labelAttributeType=Type de l'attribut
 
