PLUGINWIZARD-51 : Refactoring to use MVC library - info notifications and  i18n management
git-svn-id: http://dev.lutece.paris.fr/svn/lutece/portal/trunk/plugins/technical/plugin-pluginwizard@51633 bab10101-e421-0410-a517-8ce0973de3ef

--- a/src/java/fr/paris/lutece/plugins/pluginwizard/resources/pluginwizard_messages_fr.properties
+++ b/src/java/fr/paris/lutece/plugins/pluginwizard/resources/pluginwizard_messages_fr.properties
@@ -593,3 +593,51 @@ modify_configurationkey.rowTitleConfigurationKey=Id
 modify_configurationkey.rowTitleConfigurationValue=Valeur
 modify_configurationkey.rowTitleConfigurationDescription=Cl\u00e9
 modify_configurationkey.buttonModifyConfigurationKey=Modifier la cl\u00e9
+
+info.sessionExpired=Votre session a expir\u00e9 !<br/>Veuillez ressaisir le nom de votre plugin svp.
+info.pluginCreated=Le plugin a \u00e9t\u00e9 cr\u00e9\u00e9.
+info.dataReset=Les informations du plugin ont r\u00e9initialis\u00e9es.
+info.feature.created=La fonction d'administration a \u00e9t\u00e9 ajout\u00e9e.
+info.feature.updated=La fonction d'administration a \u00e9t\u00e9 modifi\u00e9e.
+info.feature.deleted=La fonction d'administration a \u00e9t\u00e9 supprim\u00e9e.
+info.businessClass.created=La classe m\u00e9tier a \u00e9t\u00e9 ajout\u00e9e.
+info.businessClass.updated=La classe m\u00e9tier a \u00e9t\u00e9 modifi\u00e9e.
+info.businessClass.deleted=La classe m\u00e9tier a \u00e9t\u00e9 supprim\u00e9e.
+info.attribute.created=L'attribut a \u00e9t\u00e9 ajout\u00e9.
+info.attribute.updated=L'attribut a \u00e9t\u00e9 modifi\u00e9.
+info.attribute.deleted=L'attribut a \u00e9t\u00e9 supprim\u00e9.
+info.application.created=La XPage a \u00e9t\u00e9 ajout\u00e9e.
+info.application.updated=La XPage a \u00e9t\u00e9 modifi\u00e9e.
+info.application.deleted=La XPage a \u00e9t\u00e9 supprim\u00e9e.
+info.portlet.created=La portlet a \u00e9t\u00e9 ajout\u00e9e.
+info.portlet.updated=La portlet d'administration a \u00e9t\u00e9 modifi\u00e9e.
+info.portlet.deleted=La portlet d'administration a \u00e9t\u00e9 supprim\u00e9e.
+
+
+error.feature.right.notEmpty=Le droit doit \u00eatre renseign\u00e9.
+error.feature.right.pattern=Le droit doit \u00eatre en majuscules et underscores.
+error.feature.title.notEmpty=Le droit doit \u00eatre renseign\u00e9.
+error.feature.title.size=Le titre doit contenir entre 10 et 80 caract\u00e8res.
+error.feature.name.notEmpty=Le nom technique doit \u00eatre renseign\u00e9.
+error.feature.name.pattern=Le nom technique doit commencer par une majuscules et ne contenir que des lettres
+error.feature.description.notEmpty=La description doit \u00eatre renseign\u00e9e.
+error.feature.description.size=La description doit contenir entre 10 et 255 caract\u00e8res.
+
+error.application.name.notEmpty=Le nom de la XPage doit \u00eatre renseign\u00e9.
+error.application.name.pattern=Le nom de la XPage doit \u00eatre en minuscules et ne contenir que des lettres
+error.application.class.notEmpty=Le nom de la classe doit \u00eatre renseign\u00e9.
+error.application.class.pattern=Le nom de la classe doit commencer par une majuscule et ne contenir que des lettres
+
+error.attribute.name.notEmpty=Le nom de l'attribut doit \u00eatre renseign\u00e9.
+error.attribute.name.pattern=Le nom de l'attribut doit \u00eatre en miniscules et ne contenir que des lettres et underscores
+
+error.businessClass.class.notEmpty=Le nom de la classe doit \u00eatre renseign\u00e9.
+error.businessClass.class.pattern=Le nom de la classe doit commencer par une majuscule et ne contenir que des lettres
+error.businessClass.tableName.notEmpty=Le nom de la table doit \u00eatre renseign\u00e9.
+error.businessClass.tableName.pattern=Le nom de la table doit \u00eatre en minucusles avec des underscores
+
+error.portlet.class.notEmpty=Le nom de la classe doit \u00eatre renseign\u00e9.
+error.portlet.class.pattern=Le nom de la classe doit commencer par une majuscule et ne contenir que des lettres
+error.portlet.type.notEmpty=Le nom du type doit \u00eatre renseign\u00e9.
+error.portlet.type.pattern=Le nom du type doit \u00eatre en majuscules et finir par _PORTLET
+
