PLUGINWIZARD-51 : Refactoring to use MVC library - info notifications and  i18n management
git-svn-id: http://dev.lutece.paris.fr/svn/lutece/portal/trunk/plugins/technical/plugin-pluginwizard@51640 bab10101-e421-0410-a517-8ce0973de3ef

--- a/src/java/fr/paris/lutece/plugins/pluginwizard/resources/pluginwizard_messages_fr.properties
+++ b/src/java/fr/paris/lutece/plugins/pluginwizard/resources/pluginwizard_messages_fr.properties
@@ -614,6 +614,15 @@ info.portlet.updated=La portlet d'administration a \u00e9t\u00e9 modifi\u00e9e.
 info.portlet.deleted=La portlet d'administration a \u00e9t\u00e9 supprim\u00e9e.
 
 
+error.plugin.name.notEmpty=Le nom du plugin doit \u00eatre renseign\u00e9.
+error.plugin.name.pattern=Le nom du plugin doit \u00eatre en minuscule sans espaces ou autres caract\u00e8res
+error.plugin.description.notEmpty=La description doit \u00eatre renseign\u00e9e.
+error.plugin.version.notEmpty=La version doit \u00eatre renseign\u00e9e.
+error.plugin.version.pattern=La version doit avoir le format 'N.N.N'.
+error.plugin.copyright.notEmpty=Le copyright doit \u00eatre renseign\u00e9.
+error.plugin.urlProvider.notEmpty=L'url du fournisseur doit \u00eatre renseign\u00e9e.
+error.plugin.urlProvider.url=L'url du fournisseur n'est pas valide.
+
 error.feature.right.notEmpty=Le droit doit \u00eatre renseign\u00e9.
 error.feature.right.pattern=Le droit doit \u00eatre en majuscules et underscores.
 error.feature.title.notEmpty=Le droit doit \u00eatre renseign\u00e9.
@@ -640,4 +649,9 @@ error.portlet.class.notEmpty=Le nom de la classe doit \u00eatre renseign\u00e9.
 error.portlet.class.pattern=Le nom de la classe doit commencer par une majuscule et ne contenir que des lettres
 error.portlet.type.notEmpty=Le nom du type doit \u00eatre renseign\u00e9.
 error.portlet.type.pattern=Le nom du type doit \u00eatre en majuscules et finir par _PORTLET
+
+error.attribute.tablePrefix=Le nom de la table doit commencer par le nom du plugin suivi d'un underscore.
+error.attribute.primaryType=La cl\u00e9 primaire doit \u00eatre de type entier.
+error.attribute.descriptionType=La description ne peut \u00eatre de type entier.
+error.attributeCount=La classe m\u00e9tier doit contenir au moins deux attributs : une cl\u00e9 primaire et une description
 
