PLUGINWIZARD-51 : Refactoring to use MVC library
git-svn-id: http://dev.lutece.paris.fr/svn/lutece/portal/trunk/plugins/technical/plugin-pluginwizard@51679 bab10101-e421-0410-a517-8ce0973de3ef

--- a/src/java/fr/paris/lutece/plugins/pluginwizard/resources/pluginwizard_messages_fr.properties
+++ b/src/java/fr/paris/lutece/plugins/pluginwizard/resources/pluginwizard_messages_fr.properties
@@ -387,6 +387,8 @@ pluginwizard_modify_portlet_feature.pageTitle=Modifier le portlet
 #pluginwizard_create_plugin_description.html
 pluginwizard_create_plugin_description.pageTitle=Description du plugin
 pluginwizard_create_plugin_description.labelPluginName=Nom du plugin
+pluginwizard_create_plugin_description.labelPluginDescription=Description
+pluginwizard_create_plugin_description.labelPluginProvider=Auteur
 pluginwizard_create_plugin_description.labelPluginVersion=Version du plugin
 pluginwizard_create_plugin_description.labelPluginCopyright=Copyright
 pluginwizard_create_plugin_description.labelPluginProviderUrl=Url du Fournisseur
@@ -401,6 +403,8 @@ pluginwizard_create_plugin_description.buttonNext=Etape suivante
 pluginwizard_modify_plugin_description.pageTitle=Description du plugin
 pluginwizard_modify_plugin_description.labelPluginName=Nom du plugin
 pluginwizard_modify_plugin_description.labelPluginVersion=Version du plugin
+pluginwizard_modify_plugin_description.labelPluginDescription=Description
+pluginwizard_modify_plugin_description.labelPluginProvider=Auteur
 pluginwizard_modify_plugin_description.labelPluginCopyright=Copyright
 pluginwizard_modify_plugin_description.labelPluginProviderUrl=Url du Fournisseur
 pluginwizard_modify_plugin_description.labelPlugindbPoolRequired=Base de donn\u00e9e requise
@@ -617,20 +621,23 @@ info.portlet.deleted=La portlet d'administration a \u00e9t\u00e9 supprim\u00e9e.
 error.plugin.name.notEmpty=Le nom du plugin doit \u00eatre renseign\u00e9.
 error.plugin.name.pattern=Le nom du plugin doit \u00eatre en minuscule sans espaces ou autres caract\u00e8res
 error.plugin.description.notEmpty=La description doit \u00eatre renseign\u00e9e.
+error.plugin.description.size=La description doit contenir entre 5 et 255 caract\u00e8res.
+error.plugin.provider.notEmpty=Le nom de l'auteur doit \u00eatre renseign\u00e9.
+error.plugin.provider.size=Le nom de l'auteur doit contenir entre 5 et 255 caract\u00e8res.
 error.plugin.version.notEmpty=La version doit \u00eatre renseign\u00e9e.
 error.plugin.version.pattern=La version doit avoir le format 'N.N.N'.
 error.plugin.copyright.notEmpty=Le copyright doit \u00eatre renseign\u00e9.
 error.plugin.urlProvider.notEmpty=L'url du fournisseur doit \u00eatre renseign\u00e9e.
 error.plugin.urlProvider.url=L'url du fournisseur n'est pas valide.
 
-error.feature.right.notEmpty=Le droit doit \u00eatre renseign\u00e9.
-error.feature.right.pattern=Le droit doit \u00eatre en majuscules et underscores.
-error.feature.title.notEmpty=Le droit doit \u00eatre renseign\u00e9.
+error.feature.title.notEmpty=Le titre doit \u00eatre renseign\u00e9.
 error.feature.title.size=Le titre doit contenir entre 10 et 80 caract\u00e8res.
 error.feature.name.notEmpty=Le nom technique doit \u00eatre renseign\u00e9.
 error.feature.name.pattern=Le nom technique doit commencer par une majuscules et ne contenir que des lettres
 error.feature.description.notEmpty=La description doit \u00eatre renseign\u00e9e.
 error.feature.description.size=La description doit contenir entre 10 et 255 caract\u00e8res.
+error.feature.right.notEmpty=Le droit doit \u00eatre renseign\u00e9.
+error.feature.right.pattern=Le droit doit \u00eatre en majuscules et underscores.
 
 error.application.name.notEmpty=Le nom de la XPage doit \u00eatre renseign\u00e9.
 error.application.name.pattern=Le nom de la XPage doit \u00eatre en minuscules et ne contenir que des lettres
