PLUGINWIZARD-53 : Fix and Improve portlet generation
git-svn-id: http://dev.lutece.paris.fr/svn/lutece/portal/trunk/plugins/technical/plugin-pluginwizard@51876 bab10101-e421-0410-a517-8ce0973de3ef

--- a/src/java/fr/paris/lutece/plugins/pluginwizard/resources/pluginwizard_messages_fr.properties
+++ b/src/java/fr/paris/lutece/plugins/pluginwizard/resources/pluginwizard_messages_fr.properties
@@ -162,8 +162,7 @@ pluginwizard_create_portlet.pageTitle=Cr\u00e9er un portlet dans le module
 pluginwizard_create_portlet.pageTitle=Cr\u00e9er un portlet
 pluginwizard_create_portlet.labelPortletClass=La classe de la portlet
 pluginwizard_create_portlet.labelPortletTypeName=Nom du type de portlet
-pluginwizard_create_portlet.labelCreationUrl=Url de cr\u00e9ation
-pluginwizard_create_portlet.labelUpdateUrl=Url de modification
+pluginwizard_create_portlet.labelJspBaseName=Nom de base des JSP
 pluginwizard_create_portlet.buttonCreatePortlet=Cr\u00e9er la portlet
 pluginwizard_create_portlet.buttonBack=Retour
 
@@ -172,8 +171,7 @@ pluginwizard_create_portlet.buttonBack=Retour
 pluginwizard_modify_portlet.pageTitle=Modifier le portlet
 pluginwizard_modify_portlet.labelPortletClass= La classe de la portlet
 pluginwizard_modify_portlet.labelPortletTypeName=Nom du type de portlet
-pluginwizard_modify_portlet.labelCreationUrl=Url de cr\u00e9ation
-pluginwizard_modify_portlet.labelUpdateUrl=Url de modification
+pluginwizard_modify_portlet.labelJspBaseName=Nom de base des JSP
 pluginwizard_modify_portlet.buttonModifyPortlet=Modifier la portlet
 pluginwizard_modify_portlet.buttonBack=Retour
 pluginwizard_modify_portlet.pageHelp=Les champs n\u00e9cessaires pour la cr\u00e9ation d'un plugin sont la classe du portlet.,le nom du portlet qui doit obligatoirement finir par "_PORTLET',l'url de cr\u00e9ation qui correspond \u00e0 une JSP qui sera aussi g\u00e9n\u00e9r\u00e9 automatiquement. La modification du portlet qui sera aussi g\u00e9r\u00e9e par une JSP. Le bouton " Modifier la portlet " permet de cr\u00e9er son portlet.de donn\u00e9es r\u00e9quise".
@@ -290,8 +288,7 @@ pluginwizard_manage_portlets.buttonBack=Etape pr\u00e9c\u00e9dente
 pluginwizard_manage_portlets.buttonNext=Etape suivante
 pluginwizard_manage_portlets.labelPortletClass=Classe
 pluginwizard_manage_portlets.labelPortletTypeName=Type
-pluginwizard_manage_portlets.labelPortletCreationUrl=Url de cr\u00e9ation
-pluginwizard_manage_portlets.labelPortletUpdateUrl=Url de mise \u00e0 jour
+pluginwizard_manage_portlets.labelPortletJspBaseName=Nom de base des JSP
 pluginwizard_manage_portlets.labelPortletAction=Action
 
 
@@ -653,9 +650,11 @@ error.businessClass.tableName.notEmpty=Le nom de la table doit \u00eatre renseig
 error.businessClass.tableName.pattern=Le nom de la table doit \u00eatre en minucusles avec des underscores
 
 error.portlet.class.notEmpty=Le nom de la classe doit \u00eatre renseign\u00e9.
-error.portlet.class.pattern=Le nom de la classe doit commencer par une majuscule et ne contenir que des lettres
+error.portlet.class.pattern=Le nom de la classe doit commencer par une majuscule et ne contenir que des lettres et finir par 'Portlet'
 error.portlet.type.notEmpty=Le nom du type doit \u00eatre renseign\u00e9.
-error.portlet.type.pattern=Le nom du type doit \u00eatre en majuscules et finir par _PORTLET
+error.portlet.type.pattern=Le nom du type doit \u00eatre en majuscules et finir par '_PORTLET'
+error.portlet.jspBaseName.notEmpty=Le nom de base des JSP doit \u00eatre renseign\u00e9.
+error.portlet.jspBaseName.pattern=Le nom de base des JSP doit commencer par 'Portlet' et ne contenir que des caract\u00e8res alphab\u00e9tiques.
 
 error.attribute.tablePrefix=Le nom de la table doit commencer par le nom du plugin suivi d'un underscore.
 error.attribute.primaryType=La cl\u00e9 primaire doit \u00eatre de type entier.
